update check role

--- a/db/tasks.json
+++ b/db/tasks.json
@@ -2,11 +2,11 @@
   {
     "id": "d9a599b2-9987-4a62-9a27-3c8396ba98bf",
     "title": "Task bvv123",
-    "completed": false
+    "completed": true
   },
   {
     "id": "d7fda420-f9c7-4850-9125-b8842dabd0e6",
-    "title": "Task c",
+    "title": "Task c123123",
     "completed": false
   },
   {
